[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langdag"
dynamic = ["version"]
authors = [
  { name="Reed Xiao" },
]
description = "LLM agent workflow orchestration with DAG"
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "paradag ~= 1.2.0",
  "rich ~= 13.7.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Homepage = "https://github.com/reedxiao/langdag"
Issues = "https://github.com/reedxiao/langdag/issues"

[tool.hatch.version]
path = "src/langdag/__about__.py"

